===v4.8.0===
 * New icon type: Combat Log Event. Displays information about combat events according to filters that you can set. Full support for events, including text output.
 * Rewrote the entire animation system to allow meta icons to inherit icon animations.
 * Bug Fixes:
 ** (r384) Weapon enchant should now be properly detected in zhCH clients
 ** (r384) The weapon enchant suggestion list should now properly display shaman enchants in zhTW clients
 ** (r384) TellMeWhen_Options.lua:2092 Usage: GetAddon(name): 'name' - Cannot find an AceAddon 'LUI_Cooldown'
 ** (r385) Moving/Swapping an icon that the icon editor is editing shouldn't cause the old settings to stick around
 ** (r390) Weapon enchant icons should now always detect the current weapon enchant in a timely manner for rogue characters
 ** (r391) Added the debuff that results from being the the target of a warrior who casts intimidating shout with the glyph

===v4.7.3===
 * New Feature: Animations. You can now pick animations to play when an icon event occurs, such as having the screen shake or an icon flash.
 * All event outlets have a "Play" button that you can test the event with.
 * You can now change the "Show Timer Text" option if LUI is the only addon enabled that can handle cooldown timer texts.
 * Changed the "Hide when slot is empty" to include hiding the icon if the slot being checked contains a shield or off-hand frill.
 * Implemented the "Failed Conditions" opacity setting for meta icons.
 * Slightly reworked the import dropdown to more accurately detect the group being edited, and to disallow importing of a data type where that data type is not being edited.
 * Added buttons to the icon editor to allow easy switching between recently edited icons.
 * Added suggestions for text substitutions.
 * Bug Fixes:
 ** (r356) Attempted a fix for default.lua:70 attempt to concatenate global 'input' (a table value)